--- a/web/src/pages/Home/styles.css
+++ b/web/src/pages/Home/styles.css
@@ -10,6 +10,14 @@
   "gimg-logo gheader-text";
 }
 
+.img-logo {
+  max-width:50px;
+  max-height:50px;
+  width: auto;
+  height: auto;
+  grid-area: gimg-logo;
+}
+
 #home-page .content main .btn-group {
   width: 100%;
   display: flex;
@@ -73,6 +81,10 @@
 }
 
 .nav-item:hover {
+  border-bottom: 2px solid #fff;
+}
+
+.nav-item:click {
   border-bottom: 2px solid #fff;
 }
 
