--- a/web/src/pages/Home/styles.css
+++ b/web/src/pages/Home/styles.css
@@ -10,6 +10,13 @@
   "gimg-logo gheader-text";
 }
 
+.header {
+  display: flex;
+  flex-direction: row;
+  align-items: flex-end;
+  justify-content: space-between;
+}
+
 .img-logo {
   max-width:50px;
   max-height:50px;
