--- a/web/src/pages/Home/styles.css
+++ b/web/src/pages/Home/styles.css
@@ -16,6 +16,12 @@ button {
   "gimg-logo gheader-text";
 }
 
+.header-points {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
 .header {
   display: flex;
   flex-direction: row;
@@ -24,8 +30,8 @@ button {
 }
 
 .img-logo {
-  max-width:50px;
-  max-height:50px;
+  max-width:73px;
+  max-height:73px;
   width: auto;
   height: auto;
   grid-area: gimg-logo;
