--- a/web/src/pages/Initial/styles.css
+++ b/web/src/pages/Initial/styles.css
@@ -40,7 +40,8 @@
 }
 
 .img-logo {
-  max-width: 50px;
+  max-width:73px;
+  max-height:73px;
   width: auto;
   height: auto;
   grid-area: gimg-logo;
