--- a/web/src/pages/ConfigScreen/styles.css
+++ b/web/src/pages/ConfigScreen/styles.css
@@ -1,9 +1,20 @@
-#config-page .content header {
+#config-page header {
   margin: 1em;
 }
 
-#config-page .content {
+.profPic {
+  height: 300px;
+  border-radius: 10px;  
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  outline: 0;
+}
+
+.profPic img {
   width: 100%;
+  height: 100%; 
+  object-fit: cover;
 }
 
 .header-logo {
@@ -12,6 +23,20 @@
   grid-template-columns: 10vh 25vh;
   grid-template-areas: 
   "gimg-logo gheader-text";
+}
+
+.header-information {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+.profile-picture {
+  max-width:93px;
+  max-height:93px;
+  width: auto;
+  height: auto;
+  border-radius: 50%;
 }
 
 .back-button {
