Removing some jquery usage.

--- a/web/src/pages/Home/styles.css
+++ b/web/src/pages/Home/styles.css
@@ -12,12 +12,21 @@ button {
   border: none;
 }
 
+.search-bar input {
+  min-width: 350px;
+  border-radius: 5px;
+}
+
 .header-logo {
   display: grid;
   align-items: center;
-  grid-template-columns: 10vh 25vh;
+  grid-template-columns: 10vh 13vh;
   grid-template-areas: 
   "gimg-logo gheader-text";
+}
+
+.header-text {
+  grid-area: gheader-text;
 }
 
 .header-information {
