--- a/web/src/App.css
+++ b/web/src/App.css
@@ -1,26 +1,30 @@
 :root {
-    --primary-color: #7EC8E3;
-    --title-color: #050A30;
-    --text-color: #000C66;
-  }
-  
-  * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-  }
-  
-  body {
-    background: black;
-    -webkit-font-smoothing: antialiased;
-    color: var(--text-color);
-  }
-  
-  body, input, button, li, p, label {
-    font-family: Roboto, Arial, Helvetica, sans-serif;
-  }
-  
-  h1, h2, h3, h4, h5, h6 {
-    color: var(--title-color);
-    font-family: Ubuntu;
-  }
+  --primary-color: #7EC8E3;
+  --title-color: #050A30;
+  --text-color: #000C66;
+}
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body {
+  background: black;
+  -webkit-font-smoothing: antialiased;
+  color: var(--text-color);
+}
+
+body, input, button, li, p, label {
+  font-family: Roboto, Arial, Helvetica, sans-serif;
+}
+
+h1, h2, h3, h4, h5, h6 {
+  color: var(--title-color);
+  font-family: Ubuntu;
+}
+
+.btn + .btn {
+  margin-left: 5px;
+}
