Creatig the friend requests notifications

--- a/web/src/pages/Home/styles.css
+++ b/web/src/pages/Home/styles.css
@@ -35,6 +35,10 @@ button {
   align-items: center;
 }
 
+.add-icon {
+  margin-right: 10px; 
+}
+
 .header {
   display: flex;
   flex-direction: row;
