--- a/web/src/components/Friends/styles.css
+++ b/web/src/components/Friends/styles.css
@@ -14,29 +14,12 @@
     font-size: 18px !important;
 }
 
-.profile-request-pic {
+.profile-friend-pic {
     border-radius: 50%;
     height: 50px;
     width: 50px;
     object-fit: cover;
     object-position: center;
-}
-
-.add-icon {
-    margin-right: 12px; 
-}
-
-.accept-friend {
-    margin-left: 15px;
-    margin-right: 15px;
-}
-
-.accept-friend :hover {
-    color: blue;
-}
-
-.decline-friend :hover {
-    color: red;
 }
 
 button:active {
@@ -59,4 +42,9 @@ button:focus {
     color: white;
     margin-bottom: 20px;
     margin-left: -15px;
+}
+
+.friends-icon {
+    font-size: 2.1875rem;
+    margin-right: 12px; 
 }
